--- a/shopApp/templates/product_list.html
+++ b/shopApp/templates/product_list.html
@@ -1,12 +1,14 @@
 {% extends 'base.html' %}
 {% block content %}
-
+<body>
+     {% for product in products %}
      <img src="{{ product.image.url }}" width="250" height="250">
      <h3><a href = "{% url 'product' product.id %}"> {{ product.title }}</a></h3>
      <h3> {{ product.category }}</h3>
      <h3> {{ product.price }}</h3>
      <br>
+     {% endfor %}
      <h3><a href = "{% url 'home'  %}">Home</a></h3>
      <h3> <a href="{% url 'cart_detail' %}"> Cart</a></h3>
-
+</body>
 {% endblock %}
