--- a/shopApp/templates/cart/cart_detail.html
+++ b/shopApp/templates/cart/cart_detail.html
@@ -7,17 +7,30 @@
 <body>
 {% load cart_tag %}
 
-Total Length :: {{request.session.cart|length}}
+Total Length : {{request.session.cart|length}}
 <br>
 Cart Detail:
 <br>
 {% for key,value in request.session.cart.items %}
-    {{'Название - '}}{{value.name}} <br> {{'Стоимость = '}} {{value.price}} <br> {{'Количество = '}}{{value.quantity}}
-<br> <img src="{{ value.image }}" width="300" height="300"> <br> Итого стоимость = {{ value.price|multiply:value.quantity }} <br>
+    <br>
+        {{'Название - '}} {{value.name}}
+    <br>
+        {{'Стоимость = '}} {{value.price}}
+    <br>
+        {{'Количество = '}}{{value.quantity}}
+    <br>
+        <img src="{{ value.image }}" width="300" height="300">
+    <br>
+        {{"Итого"}} = {{ value.price|multiply:value.quantity }} <br>
+
 {% endfor %}
 <br>
-    <a href="{% url 'cart_clear' %}"> Clear Cart </a>
+    <h3><a href="{% url 'payment' %}">Payment</a></h3>
 <br>
-    <a href="{% url 'home' %}">Home</a>
+    <h3><a href="{% url 'cart_clear' %}"> Clear Cart </a></h3>
+<br>
+   <h3> <a href="{% url 'home' %}">Home</a></h3>
+<br>
 </body>
+
 </html>
