--- a/shopApp/templates/registration.html
+++ b/shopApp/templates/registration.html
@@ -1,15 +1,24 @@
-
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
+{% extends 'base.html' %}
+{% block content %}
 <body>
-     <form method="post">
-         {% csrf_token %}
-         {{ form.as_p }}
-         <button type ="submit">Registration</button>
-     </form>
+    <h1>Create your account</h1>
+    <p> Please, sign up using the following form:</p>
+    <form action="." method="post">
+        {{ user_form.as_p }}
+        {% csrf_token %}
+        <p><input type="submit" value="Create my account"></p>
+    </form>
 </body>
-</html>
+{% endblock %}
+
+
+
+
+
+
+
+
+
+
+
+
