--- a/shopApp/templates/cart/cart_detail.html
+++ b/shopApp/templates/cart/cart_detail.html
@@ -1,8 +1,6 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Cart Detail</title>
+{% extends 'base.html' %}
+{% block content %}
+     <title>{% block title %}{% endblock title %}</title>
 </head>
 <body>
 {% load cart_tag %}
@@ -13,7 +11,7 @@ Cart Detail:
 <br>
 {% for key,value in request.session.cart.items %}
     <br>
-        {{'Название - '}} {{value.name}}
+        {{'Название - '}} {{ value.title }}
     <br>
         {{'Стоимость = '}} {{value.price}}
     <br>
@@ -34,3 +32,4 @@ Cart Detail:
 </body>
 
 </html>
+{% endblock %}
