--- a/shopApp/templates/category.html
+++ b/shopApp/templates/category.html
@@ -2,12 +2,11 @@
 {% block content %}
     {% for product in products %}
         <hr>
-        <img src="{{ product.image.url }}" width="200" height="330" align="right" vspace="0" hspace="500">
+        <img src="{{ product.image.url }}" width="400" height="400">
         <h3><a href="{% url 'product' product.id %}">{{ product.title }}</a></h3>
         <h3>{{ product.price }}</h3>
         <a href="{% url 'cart_add' product.id %}">Add To Cart</a>
             {% endfor %}
         </h3>
         <br>
-        <hr>
 {% endblock %}
