--- a/shopApp/templates/home.html
+++ b/shopApp/templates/home.html
@@ -2,19 +2,19 @@
 {% block content %}
 <body>
      {% if user.is_authenticated %}
-       <h1> Hello {{user.username}}</h1>
-                <li class = 'last'><a href=" {% url 'logout' %}"> Log Out</a></li>
+     <div style="text-align: right;"><h3> Hello {{user.username}}</h3></div>
+     <div style="text-align: right;"><a href=" {% url 'logout' %}"><h4>Log Out</h4></a></div>
+     <div style="text-align: right;"><h4><a href="{% url 'cart_detail' %}"> Cart</a></h4></div>
+     <div style="text-align: right;"><h4><a href=" {% url 'payment' %}"> Payment </a></h4></div>
        <br>
      {% else %}
-       <h1> You are not logged in </h1>
-       <li class = 'last'><a href = "{% url 'login' %}" > Login </a></li>
+     <div style="text-align: center;"><h1> You are not logged in </h1></div>
+       <div style="text-align: center;"><a href = "{% url 'login' %}"><h3>Login</h3></a></div>
        <br>
-       <li class = 'last'><a href = "{% url 'registration' %}">Registration </a></li>
+       <div style="text-align: center;"><a href = "{% url 'registration' %}"><h3>Registration</h3></a></div>
        <br>
      {% endif %}
        <br>
-      <a href="{% url 'cart_detail' %}"> Cart</a>
-      <a href=" {% url 'payment' %}"> Test </a>
 </body>
 {% endblock %}
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
