--- a/shopApp/templates/registration/login.html
+++ b/shopApp/templates/registration/login.html
@@ -1,10 +1,10 @@
-{% extends 'base.html' %}
+{% extends 'base1.html' %}
 {% block content %}
 <body>
      <form method="post">
          {% csrf_token %}
-         {{ form.as_p }}
-        <button type="submit">Log In</button>
+         <div style="text-align: center;">{{ form.as_p }}</div>
+        <div style="text-align: center;"><button type="submit">Log In</button></div>
      </form>
 </body>
 {% endblock %}
