--- a/shopApp/templates/base.html
+++ b/shopApp/templates/base.html
@@ -1,10 +1,16 @@
 <!DOCTYPE html>
+{%load static%}
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="{% static 'css/style.css' %}" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
     <title>{{ home }}</title>
+    <style>
+           body {
+           background-image: url('SJM_FLP_745_BEN_May_18_0770-3016x2010-ec27161.jpg')}
+    </style>
 </head>
 <body>
 <nav class="navbar navbar-expand-lg bg-light">
@@ -33,10 +39,10 @@
         </li>
           <a class="nav-link" href="{% url 'contact' %}">Contact</a>
       </ul>
-      <form class="d-flex" role="search">
-        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-        <button class="btn btn-outline-success"  type="submit">Search</button>
-      </form>
+         <form class="form-inline my-2 my-lg-2" action="#">
+         <input class="form-control mr-sm-2" type="search" placeholder="Input title product" aria-label="Search" name = "NameSearch">
+         <button class="btn btn-outline-success my-2 my-sm-2" type="submit">Search</button>
+       </form>
     </div>
   </div>
 </nav>
